@@ -54,7 +54,6 @@
 
 #include <pkgconf/hal.h>
 #include <cyg/hal/hal_arch.h>
-#include <cyg/hal/hal_cache.h>
 
 //
 // CAUTION!  This code must be copied to RAM before execution.  Therefore,
@@ -68,13 +67,7 @@ flash_program_buf(volatile unsigned char *addr, unsigned char *data, int len)
     volatile unsigned char *BA;
     unsigned short stat;
     int timeout = 5000000;
-    int i, wc, cache_on;
-
-    HAL_DCACHE_IS_ENABLED(cache_on);
-    if (cache_on) {
-        HAL_DCACHE_SYNC();
-        HAL_DCACHE_DISABLE();
-    }
+    int i, wc;
 
     ROM = FLASH_P2V((unsigned long)addr & 0xFF800000);
     BA  = FLASH_P2V((unsigned long)addr & 0xFFFE0000);
@@ -145,10 +138,6 @@ flash_program_buf(volatile unsigned char *addr, unsigned char *data, int len)
     // Restore ROM to "normal" mode
  bad:
     ROM[0] = FLASH_Reset;            
-
-    if (cache_on) {
-        HAL_DCACHE_ENABLE();
-    }
 
     return stat;
 }
